clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__llabs.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/llabs.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%lld\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[6]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const -1234567890123 : s64i
        abs
        %7 = call @printf(%4, %6) : s32i [all]
        %8 = const 0 : s32i
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
