clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__malloc_free.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/malloc_free.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn free(%arg0: void*) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i*, "p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @malloc : (u64i) -> void**
        %4 = const 4 : u64i
        %5 = const 3 : u64i
        mul
        %7 = call @malloc(%6) : void* [all]
        %8 = cast(bitcast) %7 : s32i*
        store %8, %1, align 8
        %9 = const 1 : s32i
        %10 = const 0 : s64i
        %11 = load %1 : s32i*, align 8
        ptr_stride
        store %9, %12, align 4
        %13 = const 2 : s32i
        %14 = const 1 : s64i
        %15 = load %1 : s32i*, align 8
        ptr_stride
        store %13, %16, align 4
        %17 = const 3 : s32i
        %18 = const 2 : s64i
        %19 = load %1 : s32i*, align 8
        ptr_stride
        store %17, %20, align 4
        %21 = get_global @printf : (s8i*, ...) -> s32i*
        %22 = get_global @.str : s8i[4]*
        %23 = cast(array_to_ptrdecay) %22 : s8i*
        %24 = const 0 : s64i
        %25 = load %1 : s32i*, align 8
        ptr_stride
        %27 = load %26 : s32i, align 4
        %28 = const 1 : s64i
        %29 = load %1 : s32i*, align 8
        ptr_stride
        %31 = load %30 : s32i, align 4
        %32 = add %27, %31 : s32i [nsw]
        %33 = const 2 : s64i
        %34 = load %1 : s32i*, align 8
        ptr_stride
        %36 = load %35 : s32i, align 4
        %37 = add %32, %36 : s32i [nsw]
        %38 = call @printf(%23, %37) : s32i [all]
        %39 = get_global @free : (void*) -> void*
        %40 = load %1 : s32i*, align 8
        %41 = cast(bitcast) %40 : void*
        call @free(%41) [all]
        %42 = const 0 : s32i
        store %42, %0
        %43 = load %0 : s32i
        return %43
}
