clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__qsort.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/qsort.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[5] = [3, 1, 4, 1, 5] [cir_private, default, dso_local, constant]
global .str : s8i[3] = "%d" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "\n" [cir_private, default, align 1, dso_local, constant]

fn qsort(%arg0: void*, %arg1: u64i, %arg2: u64i, %arg3: ((void*, void*) -> s32i)*) -> void [external, c];
fn cmp(%arg0: void*, %arg1: void*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*, %arg1: void*):
        %30 = alloca void*, "a", align 8
        %31 = alloca void*, "b", align 8
        %32 = alloca s32i, "__retval", align 4
        store %arg0, %30
        store %arg1, %31
        %33 = load %30 : void*, align 8
        %34 = cast(bitcast) %33 : s32i*
        %35 = load %34 : s32i, align 4
        %36 = load %31 : void*, align 8
        %37 = cast(bitcast) %36 : s32i*
        %38 = load %37 : s32i, align 4
        %39 = sub %35, %38 : s32i [nsw]
        store %39, %32
        %40 = load %32 : s32i
        return %40
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[5], "a", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.a : s32i[5]*
    copy %1, %3
    %4 = cast(array_to_ptrdecay) %1 : s32i*
    %5 = cast(bitcast) %4 : void*
    %6 = const 5 : u64i
    %7 = const 4 : u64i
    %8 = get_global @cmp : ((void*, void*) -> s32i)*
    call @qsort(%5, %6, %7, %8) [all]
    scope {
        %15 = alloca s32i, "i", align 4
        %16 = const 0 : s32i
        store %16, %15, align 4
        for cond: {
            %27 = load %15 : s32i, align 4
            %28 = const 5 : s32i
            %29 = cmp lt %27, %28 : bool
            condition %29
        } step: {
            %17 = load %15 : s32i, align 4
            %18 = inc %17 : s32i [nsw]
            store %18, %15, align 4
            yield
        } do {
            %19 = get_global @printf : ((s8i*, ...) -> s32i)*
            %20 = get_global @.str : s8i[3]*
            %21 = cast(array_to_ptrdecay) %20 : s8i*
            %22 = load %15 : s32i, align 4
            %23 = cast(integral) %22 : s64i
            %24 = get_element %1[%23] : s32i*
            %25 = load %24 : s32i, align 4
            %26 = call @printf(%21, %25) : s32i [all]
            yield
        }
        yield
    }
    %9 = get_global @printf : ((s8i*, ...) -> s32i)*
    %10 = get_global @.str.1 : s8i[2]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    %12 = call @printf(%11) : s32i [all]
    %13 = const 0 : s32i
    store %13, %0
    %14 = load %0 : s32i
    return %14
}
