clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__strtol.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/strtol.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("%ld\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("ff"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn strtol(%arg0: s8i*, %arg1: s8i**, %arg2: s32i) -> s64i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[5]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = get_global @strtol : (s8i*, s8i**, s32i) -> s64i*
        %6 = get_global @.str.1 : s8i[3]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        %8 = const #cir.ptr<null> : s8i**
        %9 = const 16 : s32i
        %10 = call @strtol(%7, %8, %9) : s64i [all]
        %11 = call @printf(%4, %10) : s32i [all]
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
